; mattlude                                -*- dune -*-
; dune
; Matt Teichman <https://elucidations.vercel.app>

(library
 (name mattlude)
 (public_name mattlude)
 (libraries prelude versioj)
 (inline_tests (backend qtest.lib)))

(rule
 (targets v.ml)
 (mode promote-until-clean)             ; copies v.ml from _build to the source tree, clean deletes
 (action (system "versioj %{targets} || echo 'let data = []' > %{targets}")))

(env
  (dev                                  ; make warnings non-fatal
    (flags (:standard -warn-error -A))))