; mattlude                                -*- dune -*-
; dune
; Matt Teichman <https://elucidations.vercel.app>

(library
 (name mattlude)
 (public_name mattlude)
 (libraries prelude)
 (inline_tests (backend qtest.lib)))

(env
  (dev                                  ; make warnings non-fatal
    (flags (:standard -warn-error -A))))
